processed/gerrit/txt/49123.txt
Change:     49123
Subject:    LU-16291 build: make kobj_type constant
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/49123
Change-Id:  I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Project:    fs/lustre-release
Branch:     b2_15
Status:     MERGED
Owner:      Jian Yu
Created:    2022-11-10 21:42:23.000000000
Updated:    2023-03-08 06:45:11.000000000
Patch Set:  3
Insertions: +3
Deletions:  -3
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Shaun Tancheff: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Shaun Tancheff

--- Commit Message ---
LU-16291 build: make kobj_type constant

Kernel v5.16-rc2-28-gee6d3dd4ed48:
commit ee6d3dd4ed48ab24b74bab3c3977b8218518247d
driver core: make kobj_type constant.

This patch makes struct kobj_type constant to fix
the following build failure against kernel 5.16:

lustre/obdclass/obd_config.c: In function 'class_modify_config':
lustre/obdclass/obd_config.c:1639:13: error: assignment discards
'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
1639 |         typ = get_ktype(kobj);
     |             ^

Lustre-change: https://review.whamcloud.com/49043
Lustre-commit: d1dbf26afd6676e02a2a00e635b9ad1fe14cf68e

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Change-Id: I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/49123
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2022-11-10 21:42:23.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2022-11-10 21:44:53.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2022-11-10 21:45:31.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/90523/ : FAILURE

--- Message (jenkins, 2022-11-10 23:52:28.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/90537/ : SUCCESS

--- Message (Jian Yu, 2023-01-26 06:56:21.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2023-01-26 07:00:00.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2023-01-26 10:37:52.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/91889/ : SUCCESS

--- Message (Autotest, 2023-01-26 17:42:31.000000000) ---
Patch Set 2:

Onyx Autotest retesting enforced review-dne-part-5 session on el8.6-x86_64/ldiskfs servers and clients for build 91889 patch 2. Requested by jianyu because of ATM-1613.

--- Message (Shaun Tancheff, 2023-01-28 02:55:37.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2023-03-08 06:45:07.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2023-03-08 06:45:11.000000000) ---
Change has been successfully cherry-picked as 88783c0f8e05178090548960e051a624a1c6561a by Oleg Drokin
